fixed book-content overlapping

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    font-size: 16px;
+    font-size: 14px;
     font-family: "Figtree", sans-serif;
 }
 
@@ -88,9 +88,15 @@ section {
     border-radius: 8px 0 0 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     margin-left: 16px;
     flex-grow: 1;
+}
+
+.book-content-no-comments {
+    max-height: 320px;
+    display: flex;
+    flex-direction: column;
+
 }
 
 .book-icon {
@@ -144,7 +150,7 @@ section {
 }
 
 .comments {
-    height: 140px;
+    max-height: 130px;
     overflow-y: auto;
 }
 
